--- a/poultryitems/templates/poultryitems/delete_seller.html
+++ b/poultryitems/templates/poultryitems/delete_seller.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block title %}
-    {% trans " Delete Egg Seller | Ethiopian Sheger Market place" %}
+    {% trans " Delete Chicken Seller | Ethiopian Sheger Market place" %}
 {% endblock %}
 
 {% block content %}
