--- a/poultryitems/templates/poultryitems/item_list.html
+++ b/poultryitems/templates/poultryitems/item_list.html
@@ -14,6 +14,10 @@
 {% block content %}
 <div class="poultry-container">
 
+    <a href="{% url 'poultryitems:index' %}" class="back-to-home">
+            <i class="fas fa-arrow-left"></i> {% trans "Back" %}
+        </a>
+        
     <div class="list-header">
             <a href="{% url 'poultryitems:item_create' %}"  class="add-poultry-btn">
                 <i class="fas fa-plus"></i> {% trans "Sell Item" %}
